fixing images to show full width on small screens

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -24,8 +24,7 @@
 
 .galleryImage {
 	position: relative;
-	width: 150px;
-	height: 150px;
+	width: 100%;
 }
 
 .video_icon {
